--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,12 @@ body {
     width: 232px;
 }
 
+#single-track-player{
+    width:500px;
+    height:500px;
+    background-color:#ffffff;
+}
+
 .QupButton{
     color: #ffffff;
     background-color: #74b301;
@@ -65,8 +71,6 @@ body {
     padding-left: 16px;
     padding-right: 16px;
     
-    border-radius:2px;
-    
     height: 40px;
     
     border-top-width: 1px;
@@ -87,8 +91,6 @@ body {
     background-color: #ffffff;
     border-style:outset;
     text-align:center;
-    border-radius:2px;
-    
     text-overflow:ellipsis;
     
     width: 70%;
@@ -109,8 +111,6 @@ body {
     margin-top:2px;
     margin-left:0px;
     
-    #padding-top:4px;
-    #padding-bottom:2px;
     padding-left: 14px;
     padding-right: 14px;
     
